fixed layout issue on mobile

--- a/src/components/UI/Styles.module.css
+++ b/src/components/UI/Styles.module.css
@@ -117,7 +117,7 @@
   padding: 7px 0 8px;
   border-radius: 20px;
   position: relative;
-  width: 140px;
+  max-width: 140px;
 }
 .new-task__date-input:focus {
   outline: none;
